[tool.poetry]
name = "try-simpleaichat"
version = "0.1.0"
description = ""
authors = ["Heng-Yi Wu <2316687+henry40408@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
simpleaichat = "^0.2.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
